--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,15 @@ bleach==5.0.1
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
+contourpy==1.0.5
+cycler==0.11.0
 debugpy==1.6.3
 decorator==5.1.1
 defusedxml==0.7.1
 entrypoints==0.4
 executing==1.1.1
 fastjsonschema==2.16.2
+fonttools==4.38.0
 idna==3.4
 importlib-metadata==5.0.0
 ipykernel==6.16.0
@@ -32,7 +35,9 @@ jupyter-server==1.21.0
 jupyter_client==7.4.2
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.3
+kiwisolver==1.4.4
 MarkupSafe==2.1.1
+matplotlib==3.6.0
 matplotlib-inline==0.1.6
 mistune==2.0.4
 nbclassic==0.4.5
@@ -40,6 +45,7 @@ nbclient==0.7.0
 nbconvert==7.2.1
 nbformat==5.7.0
 nest-asyncio==1.5.6
+networkx==2.8.7
 notebook==6.5.1
 notebook-shim==0.1.0
 numpy==1.23.4
@@ -50,6 +56,7 @@ pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.2.0
 prometheus-client==0.15.0
 prompt-toolkit==3.0.31
 psutil==5.9.2
@@ -66,6 +73,7 @@ qtconsole==5.3.2
 QtPy==2.2.1
 requests==2.28.1
 requests-oauthlib==1.3.1
+seaborn==0.12.1
 Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.3.0
