--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ fonttools==4.38.0
 idna==3.4
 importlib-metadata==5.0.0
 ipykernel==6.16.0
-ipython==8.0.0
+ipython
 ipython-genutils==0.2.0
 ipywidgets==8.0.2
 jedi==0.18.1
