--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ fonttools==4.38.0
 idna==3.4
 importlib-metadata==5.0.0
 ipykernel==6.16.0
-ipython
+ipython==8.0.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.2
 jedi==0.18.1
@@ -37,7 +37,7 @@ jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.3
 kiwisolver==1.4.4
 MarkupSafe==2.1.1
-matplotlib
+matplotlib==3.6.0
 matplotlib-inline==0.1.6
 mistune==2.0.4
 nbclassic==0.4.5
